--- a/InstaCloneFirebase/InstaCloneFirebase/Info.plist
+++ b/InstaCloneFirebase/InstaCloneFirebase/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To Choosen a Photo!</string>
 </dict>
 </plist>
